Fix dark mode character sheet

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -170,7 +170,7 @@ table.v-table {
     }
   }
 
-  .v-table, .v-card {
+  .v-table {
     background-color: $darkSideDarkGrey;
     border-color: $darkSideDarkGrey;
   }
